--- a/client/src/components/app-bar/AppNavbar.css
+++ b/client/src/components/app-bar/AppNavbar.css
@@ -23,7 +23,7 @@
 /* general css ends */
 .app-navbar-wrap {
   width: 100%;
-  height: 6rem;
+  height: 5rem;
   position: fixed;
   top: 0;
   text-align: center;
@@ -42,7 +42,7 @@
   align-items: center;
 }
 
-.app-navbar-wrap .col1 > button {
+.app-navbar-wrap .col1>button {
   border: 0;
   outline: none;
   color: white;
@@ -52,7 +52,7 @@
   background-color: transparent;
 }
 
-.app-navbar-wrap .col1 > button:hover {
+.app-navbar-wrap .col1>button:hover {
   background-color: var(--hover-bg);
 }
 
@@ -63,7 +63,7 @@
   width: 15rem;
 }
 
-.app-navbar-wrap .col1 .landing-page-submenu li > span {
+.app-navbar-wrap .col1 .landing-page-submenu li>span {
   border-bottom: var(--border);
 }
 
@@ -79,6 +79,7 @@
   width: 10rem;
   background-color: var(--background);
 }
+
 /* col1 ends */
 
 /* col2 */
@@ -102,6 +103,7 @@
 .app-navbar-wrap .col2 .subcol2-5 {
   position: relative;
 }
+
 .app-navbar-wrap .col2 .subcol2-5 .submenu {
   position: absolute;
   left: 0;
@@ -128,6 +130,6 @@
 .app-navbar-wrap .col2 .subcol2-5 .nested-submenu li {
   padding-left: 1rem;
 }
+
 /* col2 ends */
-@media only screen and (max-width: 680px) {
-}
+@media only screen and (max-width: 680px) {}
