--- a/client/src/components/footer/Footer.css
+++ b/client/src/components/footer/Footer.css
@@ -4,8 +4,8 @@
     display: flex;
     width: 100%;
     /* border: 1px solid black; */
-    margin-top: 3rem;
-    background-color:black;
+    /* margin-top: 3rem; */
+    background-color: black;
     padding-top: 1rem;
     padding-bottom: 2rem;
 }
@@ -52,7 +52,7 @@
 }
 
 .footer-wrapper .section2 .input-section .btn {
-    background-color:  rgb(244, 105, 5);
+    background-color: rgb(244, 105, 5);
     color: rgb(255, 255, 255);
 }
 
