--- a/client/src/components/product-forms/apartment-form/ApartmentForm.css
+++ b/client/src/components/product-forms/apartment-form/ApartmentForm.css
@@ -37,7 +37,8 @@
 /* Form Steps */
 
 .form-steps.property-details {
-    height: 118px;
+    height: 154px;
+    padding-top: 5px;
     overflow-y: scroll;
 }
 
