--- a/client/src/components/product-forms/apartment-form/ApartmentForm.css
+++ b/client/src/components/product-forms/apartment-form/ApartmentForm.css
@@ -19,6 +19,7 @@
     padding-bottom: 10px;
     background-color: transparent;
     box-shadow: rgba(3, 102, 214, 0.2) 0px 0px 0px 3px;
+    position: relative;
 }
 
 .apartment-form-container>section:first-child {
@@ -106,4 +107,16 @@
 .upload-image-form-wrapper .images-wrapper .uploaded-images img {
     width: 100%;
     height: 100%;
+}
+
+/* Preview Button */
+
+.preview-button {
+    right: 1rem;
+    bottom: 1rem;
+    width: fit-content;
+    position: absolute;
+    border-radius: 5px;
+    background-color: white;
+    border: 2px solid rgba(3, 102, 214, 0.3);
 }
