--- a/client/src/components/products-landingPages/apartment/how-it-works-video/how-it-works.css
+++ b/client/src/components/products-landingPages/apartment/how-it-works-video/how-it-works.css
@@ -3,17 +3,17 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 2rem auto;
     width: 75%;
 }
 
 .how-fractional-asset-works-video-component h2 {
     width: 100%;
+    margin: 2rem 0;
+    font-size: 45px;
+    color: #334155;
+    font-weight: 500;
     text-align: center;
     font-family: 'Playfair Display', serif;
-    font-size: 45px;
-    font-weight: 500;
-    margin-bottom: 4rem;
 }
 
 .how-fractional-asset-works-video {
@@ -35,13 +35,13 @@
     .how-fractional-asset-works-video-component h2 {
         font-size: 28px;
         font-weight: 500;
-        margin-bottom: 3rem;
+        /* margin-bottom: 3rem; */
     }
 }
 
 @media screen and (max-width: 480px) {
     .how-fractional-asset-works-video-component {
-        margin-top: 5rem;
+        /* margin-top: 5rem; */
         width: 100%;
     }
 }
