--- a/client/src/components/website-details/how-it-works/howitworks-step/steps.css
+++ b/client/src/components/website-details/how-it-works/howitworks-step/steps.css
@@ -1,12 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Domine:wght@500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500&display=swap');
 
 .howitworks-step-container {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
   margin: 0px auto;
+  align-items: center;
+  justify-content: center;
   /* border: 1px solid red; */
 }
 
@@ -16,77 +17,91 @@
   margin-bottom: 2rem;
 }
 
+.howitworks-header * {
+  font-family: 'Domine', serif;
+}
+
 .howitworks-header h2 {
   font-size: 50px;
-  color: #334155;
+  color: #1e3a8a;
   font-family: "Domine", serif;
 }
 
 .howitworks-header p {
   width: 1000px;
   font-size: 20px;
+  color: #334155;
   margin-top: 1rem;
   padding: 0px 25px;
   font-weight: 500px;
 }
 
 .steps-container {
-  width: 90%;
-  flex-wrap: wrap;
-  display: flex;
+  /* flex-wrap: wrap;
+  display: flex; */
+  gap: 2rem;
+  display: grid;
+  width: fit-content;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.steps-container * {
+  font-family: 'Montserrat', sans-serif;
 }
 
 .step {
   width: 18rem;
   height: 15rem;
-  display: flex;
   padding-top: 0px;
   text-align: center;
-  padding-right: 15px;
-  flex-direction: column;
+  /* padding-right: 15px; */
   /* background-color: #021b43; */
-  background: linear-gradient(to top, #667b9d, #3b5d93, #606e88, #021b43);
   position: relative;
-  box-shadow: 20px 2px 20px 2px rgb(206, 206, 206);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  box-shadow: rgba(3, 102, 214, 0.1) 0px 0px 0px 3px;
+  background-color: #eff6ff;
   border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .step-content {
-  /* border: 1px solid white; */
-  padding-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
 .step-title {
   font-size: 18px;
-  font-weight: 400;
+  font-weight: 500;
+  color: #1e3a8a;
   text-align: center;
-  color: aliceblue;
+  margin-bottom: 1rem;
 }
 
 .step-description {
-  color: #000000;
+  width: 90%;
+  color: #334155;
   font-size: 16px;
+  margin-bottom: 0;
   text-align: center;
 }
 
 .step .step-icon {
-  position: absolute;
   left: 40%;
   top: 10%;
+  position: absolute;
 }
 
 /* Media queries for responsiveness */
 @media screen and (max-width: 1000px) {
   .steps-container {
-    width: 100%;
-    justify-content: center;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .step {
+  /* .step {
     margin: 10px;
-  }
+  } */
 
   .howitworks-header {
     margin-bottom: 1rem;
@@ -104,12 +119,8 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 700px) {
   .steps-container {
-    flex-direction: column;
-  }
-
-  .step {
-    width: 95%;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 }
